<resources>
    <string name="app_name">VISR-Alpha</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Physical Sciences</string>
    <string name="mechanics">Mechanics</string>
    <string name="matter1">Matter &amp; Matterial 2</string>
    <string name="waves">Sound, Waves &amp; Light</string>
    <string name="electromag">Electricity &amp; Magnetism</string>
    <string name="supp">Supplementary</string>
    <string name="matter2">Matter &amp; Material 2</string>
    <string name="chemChange">Chemical Change</string>
    <string name="chemSys">Chemical Systems</string>
    <!-- <string name="optical">Unit 9: Optical</string>
      <string name="emmision">Unit 10: Emmision &amp; Absorption</string>
-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="second_fragment">second fragment</string>
    <string name="third_fragment">third fragment</string>
    <string name="fragment_one_txt">You\'re now on fragment 1</string>
    <string name="first_fragment">first fragment</string>

    <string name="action_about">about</string>
    <string name="action_one">action one</string>
    <string name="action_two">action two</string>
    <string name="action_three">action three</string>
    <string name="action_four">action four</string>
    <string name="action_five">action five</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="empty_menu_item">##TODO##</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
